Fixed hover & other problem

--- a/Ex2-Assignment-Level-1/assets/stylesheets/main.css
+++ b/Ex2-Assignment-Level-1/assets/stylesheets/main.css
@@ -48,6 +48,13 @@ a {
     color: #fff;
 }
 
+a:hover {
+    color: greenyellow;
+}
+
+.active {
+    color: #0f0;
+}
 /* ====================================
 Header
 ===================================== */
